--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Demetrio Teodoro Vieira,Demetrio,Demetrio Teodoro,demetrio,demetrio teodoro,Demetrio Vieira">
   <title>Currículo de Demetrio T. Vieira</title>
   <link rel="stylesheet" href="stilos.css">
-  <link rel="shortcut icon" href="icons8-contatos-50.png" >
+  <link rel="shortcut icon" href="icone.ico" >
 </head>
 <body>
 
