--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <main>
                 <div class="header">
                     <div class="div-logo">
-                        <img id="nome" src="img/nome.png" />
+                        <img id="nome" src="nome.png" />
                     </div>
                     <div class="redes-sociais">
                         <ul>
