--- a/about.html
+++ b/about.html
@@ -13,11 +13,11 @@
             <main>
                 <div class="header">
                     <div class="div-logo">
-                        <img id="nome" src="img/nome.png" />
+                        <img id="nome" src="nome.png" />
                     </div>
                     <div class="redes-sociais">
                         <ul>
-                            <li><a href="https://outlook.live.com/mail/0/inbox" target="_blank"><img id="gmail" src="img/outlook.png" height="35px" width="35px"></a></li>
+                            <li><a href="https://outlook.live.com/mail/0/inbox" target="_blank"><img id="gmail" src="outlook.png" height="35px" width="35px"></a></li>
                             <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNwfvsTBQQNMxfRNZgJLfcLlQKdDVBTFRwwwFkPQspcSfrgVLqFmbzrxjbGDfVPnBMlgqB" target="_blank"><img id="gmail" src="gmail.png" height="35px" width="35px"></a></li>
                             <li><a href="https://www.linkedin.com/in/demetrio-teodoro-vieira-3ab190184/" target="_blank"><img id="linkedin" src="linkedin.png" height="35px" width="35px"></a></li>
                             <li><a href="https://github.com/DemetrioProgram" target="_blank"><img id="github" src="github.png" height="35px" width="35px"></a></li>
